
Package: PSCBS
==============

Version: 0.18.1 [2011-12-03]
o Added writeSegments() for PSCBS object.
o Now print() for AbstractCBS returns getSegments(..., simplify=TRUE).
o Added argument 'simplify' to getSegments().
o Added arguments 'name', 'tags' and 'exts' to writeSegments() and
  writeLocusData() and dropped 'filename'.


Version: 0.18.0 [2011-11-28]
o Added pruneByHClust() for AbstractCBS, with implementation
  for CBS and PairedPSCBS.
o extractCNs() for CBS would not return a matrix but a data.frame.
o BUG FIX: extractTotalCNs() for CBS would give an error.


Version: 0.17.4 [2011-11-26]
o Added argument 'updateMeans=TRUE' to callROH() for PairedPSCBS.
o Now bootstrapTCNandDHByRegion() for PairedPSCBS preserves NAs 
  for DH and (C1,C2) quantiles, if the DH mean level is NA, which
  can happen when a segment is called ROH.  This also makes sure
  that a segment called ROH will not be called AB.
o An internal sanity check of bootstrapTCNandDHByRegion() for
  PairedPSCBS would give an error if DH mean levels had been set
  to NA for segments called ROH.


Version: 0.17.3 [2011-11-24]
o Added callSegmentationOutliers() and dropSegmentationOutliers()
  for data frames.
o CLEANUP: Renamed field 'position' of the example data to 'x'.
  This helps us clean up some of the examples.
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would give
  an error, if a segment did not have any TCN signals, which can
  occur when known segments are specified for Paired PSCBS.


Version: 0.17.2 [2011-11-22]
o Added findLargeGaps() and gapsToSegments().


Version: 0.17.1 [2011-11-21]
o BUG FIX: The internal sanity check of testROH() on weights was
  slightly too conservative (required to high precision) when it
  came to asserting that the sum of the weights equals one.
o BUG FIX: resegment() for PairedPSCBS called segmentByCBS()
  instead of segmentByPairedPSCBS().


Version: 0.17.0 [2011-11-19]
o GENERALIZATION: Now it is possible to run Paired PSCBS (without